# edgar_client

./: .gitignore  README.md  mix.exs
.github/workflows/: release.yml
lib/: edgar.ex  edgar_client.ex
lib/edgar/: company_feed.ex  current_feed.ex  form13.ex  form4.ex  native.ex  thirteenf.ex  xbrl.ex
livebook/: current_holdings.livemd
native/edgar/: Cargo.toml  README.md
native/edgar/src/: form13.rs  form4.rs  lib.rs  thirteenf.rs
native/edgar_parser/: Cargo.toml
native/edgar_parser/src/: company_feed.rs  current_feed.rs  feeds.rs  form13.rs  form4.rs  lib.rs  ownership.rs  press_release_feed.rs  thirteenf.rs  xbrl.rs  xml.rs
test/: edgar_client_test.exs  edgar_test.exs  native_test.exs  parser_test.exs
test/test_data/: company.idx  company_feed.xml  crawler.idx  current_feed.xml  doc13f_ctr.xml  doc13f_ctra.xml  doc13f_hr.xml  doc13f_hra.xml  doc13f_nt.xml  doc13f_nta.xml  doc13f_table.xml  doc3.xml  doc3a.xml  doc4.xml  doc4a.xml  doc5.xml  doc5a.xml  form13_table.xml  form13f_doc.xml  form3.xml  form4.xml  form4a.xml  press_release_feed.xml  xbrl.idx  xbrl.xml  xbrl_feed.xml
