[package]
name = "edgar_parser"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "edgar_parser"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
serde = { version = "1.0.163", features = ["derive"] }
quick-xml = { version = "0.28.2", features = ["serialize"] }
roxmltree = "0.8.0"
